Fix two horizontal scrollbars in table #LMR-1394

--- a/src/app/view/perspectives/table/header/table-header.component.scss
+++ b/src/app/view/perspectives/table/header/table-header.component.scss
@@ -1,6 +1,7 @@
 :host {
   display: block;
   min-height: calc(var(--caption-height) + var(--column-group-height));
+  overflow: hidden;
   transform: scale(1, 1); // keep header in embedded mode
   z-index: 10;
 
